# omajinai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.MD
.github/workflows/: ci.yml
src/: config.rs  context.rs  error.rs  lib.rs  main.rs
src/handlers/: health.rs  mod.rs  performance.rs
src/models/: mod.rs  requests.rs  responses.rs  score.rs
src/routes/: mod.rs
src/services/: beatmap.rs  mod.rs  performance.rs  recalculate.rs
src/utils/: mods.rs
