[package]
name = "omajinai"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "json", "time"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "default", "hashbrown", "json", "uuid", "safe_iterators"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "834b22b0c4d03ebae6b142844ecdf74b3b277a43", features = ["sync"] }
rosu-mods = { version = "0.3.0", default-features = false, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
