[package]
name = "omajinai"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
warp = { version = "0.3", default-features = false, features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros", "json", "time"] }
redis = { version = "0.32.5", default-features = false, features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "fcc0f2f519cf106c4e63b2d76f3b71bbf756559f", features = ["sync"] }
rosu-mods = { version = "0.3.0", default-features = false, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
